--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
 </head>
 <body ng-app="todosApp" ng-controller="TestCtrl">
 
-    <div class="jumbotron">
-        <div class="container text-center">
+    <div class="container">
+        <div class="jumbotron text-center ">
             <h1>Todo list application</h1>
+            <form>
+                <input type="text" ng-model="todo" placeholder="what's next?">
+              </form>
+                 
         </div>
-    </div>
     
+    </div>   
 </body>
 </html>
