--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <script src="app/model/task.js"></script>
     <script src="app/model/tasks.js"></script>
     <script src="app/todosCtrl.js"></script>
-    <!--
     <link rel="stylesheet" href="css/style.css">
+    <!--
     <script src="app/gallery/carGalleryCtrl.js"></script>
     <script src="app/details/carDetailsCtrl.js"></script>
     <script src="app/nav/navDirective.js"></script>
@@ -25,16 +25,20 @@
     <title>Document</title>
 </head>
 
-<body >
+<body>
 
     <div class="container" ng-controller="todosCtrl">
-        <div class="jumbotron text-center ">
-            <h1>To do list application</h1>
-            <form ng-submit="funcadd()">
-                 <input type="text" ng-model="name" placeholder="what's next?"> 
-            </form>
-            <ul >
-                <li ng-repeat="task in tasks">{{task.name}}</li>
+        <div class="jumbotron ">
+            <div class="text-center">
+                <h1>To do list application</h1>
+                <form ng-submit="funcadd()">
+                    <input type="text" ng-model="name" placeholder="what's next?">
+                </form>
+            </div>
+            <ul class="well list-unstyled">
+                <li ng-repeat="task in tasks">
+                    <input type="checkbox" ng-checked="checked()" ng-class="{'red-selected': task.selected}"> {{task.name}}
+                </li>
 
         </div>
 
